--- a/style.css
+++ b/style.css
@@ -16,6 +16,11 @@ section{background-color:#F81146 ;}
         align-items: center;
 }
 
+.header .logo h2{
+    padding: 20px;
+    cursor: pointer;
+}
+
 section{font-family: "Milonga", serif;}
 
 .logo h2{color: white;}
@@ -26,3 +31,22 @@ font-size: 14px;
 font-weight: 100;
 }
 
+
+.hero{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 20px;
+}
+
+.hero .content h1{
+    color: white;
+    font-size: 50px;
+
+}
+
+.hero .image img{
+    width: 400px;
+    height: 400px;
+    border-radius: 13%;
+}
